計算履歴の保存をCookieで実装

--- a/html/assets/css/calculator.css
+++ b/html/assets/css/calculator.css
@@ -1,5 +1,6 @@
 .wid-master{
     max-width: 490px;
+    min-width: 490px;
 }
 
 .wid-200{
@@ -19,6 +20,10 @@
     margin: 5px;
 }
 
+/*パディング*/
+.padding{
+    padding: 10px;
+}
 
 .flex{
     display: flex;
