ランキング実装完了

--- a/html/assets/css/calculator.css
+++ b/html/assets/css/calculator.css
@@ -67,6 +67,11 @@
 
 /*---- 連打ゲーム ----*/
 
+.wid-body-ranking{
+    max-width: 700px;
+    min-width: 700px;
+}
+
 .text-bold{
     font-weight: bold;
 }
