--- a/html/assets/css/web_apri.css
+++ b/html/assets/css/web_apri.css
@@ -15,6 +15,11 @@
     min-width: 465px;
 }
 
+.wid-300{
+    max-width: 300px;
+    min-width: 300px;
+}
+
 .wid-200{
     max-width: 200px;
     min-width: 200px;
@@ -68,6 +73,11 @@
 /*---- 連打ゲーム ----*/
 
 .wid-body-mash{
+    max-width: 550px;
+    min-width: 550px;
+}
+
+.wid-body-ranking{
     max-width: 700px;
     min-width: 700px;
 }
